kubernetes/go-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: go-natricon-deployment
  namespace: natricon-dev
  labels:
    app: go-natricon
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-natricon
  template:
    metadata:
      labels:
        app: go-natricon
    spec:
      containers:
      - name: go-natricon
        image: docker-registry.appditto.com/go-natricon:latest
        ports:
          - containerPort: 5555
        imagePullPolicy: "Always"
      imagePullSecrets:
          - name: regcred
---
kind: Service
apiVersion: v1
metadata:
  name: go-natricon-service
spec:
  selector:
      app: go-natricon
  type: NodePort
  ports:
    - port: 5555
