kubernetes/nuxt-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nuxt-natricon-deployment
  namespace: natricon-dev
  labels:
    app: nuxt-natricon
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nuxt-natricon
  template:
    metadata:
      labels:
        app: nuxt-natricon
    spec:
      containers:
      - name: nuxt-natricon
        image: docker-registry.appditto.com/nuxt-natricon:latest
        ports:
          - containerPort: 3000
        imagePullPolicy: "Always"
      imagePullSecrets:
          - name: regcred
---
kind: Service
apiVersion: v1
metadata:
  name: nuxt-natricon-service
  namespace: natricon-dev
spec:
  selector:
      app: nuxt-natricon
  type: NodePort
  ports:
    - port: 3000
