kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: natricon-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - natricon-go-server.appditto.com
    secretName: natricon-go-server-secret
  rules:
  - host: natricon-go-server.appditto.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nuxt-natricon-service
          servicePort: 3000
      - path: /api
        backend:
          serviceName: go-natricon-service
          servicePort: 5555
